# p_config

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  setup.cfg  setup.py  setup.py.back  tox.ini
docs/: @allmylinks.rdrt  Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  p_config.rst  usage.rst
p_config/: __init__.py  converter.py  core.py  utils.py
tests/: __init__.py  default.yml  override.yml  test_p_config.py
