[metadata]
name = p_config
version = attr: p_config.__version__
project_urls=
    Source Code = https://github.com/zlqm/p_config
    Issue Tracker = https://github.com/zlqm/p_config/issues/
license = BSD
author = Abraham
author_email = abraham.liu@hotmail.com
description = small tool for project config management
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Utilities

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
testpaths = tests
